2008-02-03  Ingo Renner  <ingo@typo3.org>

	 * fixed a positioning issue with the toolbar items in Safari

2008-02-02  Benjamin Mack  <mack@xnos.org>

	* Fixed #7347: Pagetree was not responding correctly when logged out.  Thanks to Ingmar

2008-02-02  Ingo Renner  <ingo@typo3.org>

	* fixed module menu for long module names, credits Steffen Kamper
	* fixed t3skin's border.html: removed the xml prologue as it triggers IE's quirks mode
	* fixed bug #7352: New backend problems in FireFox, Safari, OmniWeb and Camino

2008-02-02	Dmitry Dulepov	<dmitry@typo3.org>

	* Added feature #7336: Improve usability of Constants Editor
	* t3lib/class.ts_parser_ext.php: quotes changed from double to single, function index updated with extdeveval

2008-02-02  Martin Kutschker  <martin.t.kutschker@blackbox.net>

	* !!! #7350: Use PHP5 features in class.t3lib_div.php (static and type hinting)
	* #7351: Introduce $ACCESS_TIME/$SIM_ACCESS_TIME to improve Mysql query cache usage
	* Changed t3lib_div::get_tag_attributes/split_tag_attributes so that they always return an array

2008-02-02  Kasper Skaarhoj <kasper2008@typo3.com>

	* Fixed a bug in tcemain that replicated FlexForm .vDEFbase tags in a strange way. Not critical but built up garbage in FlexForm XML (the XML can be cleaned with the lowlevel_cleaner or manually per recording using the Content Menu Item "FlexForm XML")

2008-02-01  Kasper Skaarhoj <kasper2008@typo3.com>

	* Feature added to disable automatic update of diff data for translation when saving records. Instead a button is added to explicitly do this. Feature is called "explicitConfirmationOfTranslation" in $TYPO3_CONF_VARS
	* Added option for custom message in the logout message for workspace previews.
	* Fixed a bug in TTLhours for preview links.

2008-02-01  Bernhard Kraft  <kraftb@kraftb.at>

	* Added feature #7337: stdWrap for "range" and "entryLevel" in class.tslib_menu.php (patch by Georg Ringer)

2008-02-01  Stanislas Rolland  <stanislas.rolland@fructifor.ca>
