@@ -1,6 +1,7 @@
 2008-02-03  Ingo Renner  <ingo@typo3.org>
 
 	 * fixed a positioning issue with the toolbar items in Safari
+	 * added feature #7282: Show Realname of BE-User if available and link it to edit, credits Steffen Kamper
 
 2008-02-02  Benjamin Mack  <mack@xnos.org>
 
